# libqueue

./: .gitignore  CMakeLists.txt  Makefile.in  README.mkd  aclocal.m4  configure  configure.ac  qcount.c  qlen.c  qpeek.c  qpop.c  qtest.c  queue.c  queue.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  qlen.c  qpeek.c  qpoke.c  qpop.c  qpush.c  queue.c  queue.h  queueutils.h
tests/: Makefile  queuelibtest0  queuelibtest0.c
